# job-scraper

./: .env.example  .gitignore  README.md  README_RU.md  main.py  pyproject.toml  requirements.txt
app/application/dto/: __init__.py  scrape_result.py
app/application/interfaces/: __init__.py  notifier.py  repositories.py  scrapers.py  unit_of_work.py
app/application/services/: __init__.py  aggregation_service.py  deduplication_service.py  title_query_match.py
app/domain/: __init__.py  entities.py  enums.py
app/infrastructure/bot/: __init__.py  bot.py  formatters.py  handlers.py  middlewares.py  notifier.py
app/infrastructure/config/: __init__.py  container.py  env_settings.py
app/infrastructure/persistence/: __init__.py  database.py  models.py  unit_of_work.py
app/infrastructure/persistence/repositories/: __init__.py  daily_stats_repo.py  job_repo.py  seen_jobs_repo.py  settings_repo.py  site_filter_repo.py  source_repo.py  telegram_channel_repo.py
app/infrastructure/scheduler/: __init__.py  scheduler.py  worker.py
app/infrastructure/scrapers/: __init__.py  base_scraper.py
app/infrastructure/scrapers/geekjob/: __init__.py  geekjob_scraper.py  selectors.py
app/infrastructure/scrapers/habr/: __init__.py  description_parser.py  habr_rss_scraper.py
app/infrastructure/scrapers/hh/: __init__.py  area_normalize.py  hh_api_scraper.py  mappers.py  selectors.py
app/infrastructure/scrapers/http/: __init__.py  (+4 more)
app/presentation/gui/: app.py  theme.py
app/shared/: __init__.py  constants.py  exceptions.py  logging.py  query_token_aliases.py  utils.py
(+16 files in other folders)
